# ggsolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  UDPATE.md  decorator.py  environment.yml  requirements.txt  setup.py
.run/: ggsolver-jupyter.run.xml
docker/: Dockerfile  Dockerfile_old  rebuild.py
docker/devel/: Dockerfile
docker/latest/: Dockerfile
docs/: automata.md  conventions.md  games.md  parsers.md
docs/source/: api.rst  conf.py  examples.rst  graph.rst  index.rst  install.rst
docs/source/examples/: graphs.html  graphs.rst  i_spot.html  i_spot.rst  models_tsys.html  models_tsys.rst  subgraphs.html
docs/source/modules/: automata.rst  dtptb.rst  graph.rst  interfaces.rst  mdp.rst  models.rst
examples/: demo_strategy.py  ex_graph.py  graph_save_load.py  graphs.ipynb  gwgame1.game  gwgame1.strategy  hw1_soln.py  mygraph.graph  pickle_games.ipynb  subgraphs.ipynb  types.h
examples/.ipynb_checkpoints/: scltl-checkpoint.ipynb  scltlpref-checkpoint.ipynb
examples/apps/bankheist/: generator_manual.py  main.py
examples/apps/bankheist/saved_games/: game_2022_11_21_20_05.conf  game_2022_11_21_22_05.conf  game_2022_11_22_10_22.conf
examples/dtptb/: jobstmann.py
examples/fmr22_lec14/: jobstmann.py
examples/interfaces/: i_spot.ipynb
examples/logic/: lex-scltlpref.ipynb  pl.ipynb  scltl.ipynb
examples/logic/.ipynb_checkpoints/: lex-scltlpref-checkpoint.ipynb  pl-checkpoint.ipynb  pl-parser-checkpoint.ipynb  scltl-checkpoint.ipynb  scltlpref-checkpoint.ipynb
examples/models/: automata.ipynb  models_tsys.ipynb
examples/notebooks/: game.ipynb
examples/notebooks/logic/: dfpa.ipynb  prefltl.ipynb
examples/notebooks/models/: models_tsys.ipynb
examples/old_examples/examples2/griworld_demos/bankheist/: main.py
examples/parsers/: parse_pl.py  parse_scltl.py
examples/scripts/: aut_graphify.py  logic_pl.py  spotautomaton.py
examples/tictactoe/: main.py
ggcore/: CMakeLists.txt  dtptb.h  entity.h  game.h  graph.h  main.cpp  mdp.h  oneplayer.h  stptb.h  test_types.cpp  types.h  version.h
ggcore/python/: CMakeLists.txt  pybindings.cpp  pybindings.h
ggsolver/: __init__.py  automata.py  cyberbattlesim.py  dfa.py  ds.py  entity_test.py  ggsolver_benchmark.py  ggsolver_import.py  graph.py  graph_test.py  models.py  snap_py_benchmark.py  try_subgraph.py  util.py  utils.py
ggsolver/decoy_alloc/: cyberbattlesim.py  models.py  solvers.py
ggsolver/decoy_alloc/examples/: example13.py
ggsolver/dev/: graph.py  graph_test.py  nx_benchmark.py
ggsolver/dtptb/: __init__.py  model.py  models.py  reach.py  reachability.py  solvers.py
ggsolver/dtptb/examples/: jobstmann.py  jobstmann_tsys.py
ggsolver/examples/: demo_strategy.py
ggsolver/gridworld/: README.md  color_util.py  ex_devel.py  ex_devel_v2.py  ex_gwsim_cls.py  models.py  viz.py
ggsolver/gridworld/draft/: sprites.py
ggsolver/gridworld/examples/: devel_gwsim.py
ggsolver/inc_pbp/: ex_gw1.py  ex_gw2.py  ex_gw3.py  ex_gw4.py  ex_gw5.py  ex_test.py  ex_toy.py  models.py  mp_outcomes.json  reachability.py
ggsolver/interfaces/: i_json.py  i_networkx.py  i_numpy.py  i_pgsolver.py  i_pickle.py  i_png.py  i_spot.py
ggsolver/logic/: __init__.py  automata.py  base.py  formula.py  ltl.py  pl.lark  pl.py  prefltl.py  scltl.lark  scltl.py  scltlpref.lark  scltlpref.py
ggsolver/logic/grammars/: prefltl.lark
ggsolver/mdp/: __init__.py  ex_pomc_fig_10_21.py  model.py  models.py  reachability.py  solvers.py
ggsolver/oneplayer/: __init__.py  model.py  solvers.py
ggsolver/pbp/asi/: models.py
ggsolver/pbp/safeimp/: models.py  reachability.py
ggsolver/sg_pcof/: models.py
ggsolver/spotaut/: __init__.py  translator.py
ggsolver/stptb/: model.py  solvers.py
ggsolver/zlk/: reachability.py
ggsolver/zlk/examples/: jobstmann.py  jobstmann_tsys.py
parsers/: __init__.py  automata.py  pl.lark  pl.py  scltl.lark  scltl.py  scltlpref.lark  scltlpref.py  utils.py
tests/: CMakeLists.txt  test_entity.cpp  test_parsers_automata.py  test_parsers_pl.py  test_parsers_scltl.py  test_pybind.cpp  test_snap.cpp
tests/mdp/: benchmark.py  rand_mdp.py  test_api.py
tests/python/: CMakeLists.txt  test_entity.py
